Custom The talking house graphs

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
-<H1>Open Graphs</H1>
+<H1>The Talking House: Glarus</H1>
+
+<H1>Sound 1</H1>
 <p>
 <ul>
-  <li>DRAFT LARGE GRAPH: <a href="https://halioui.github.io/opengraph/example/large-graph/">b7b72195de5bba1c4dbd418825340fca</a></li>
-  <li>DRAFT TEXT NODES: <a href="https://halioui.github.io/opengraph/example/text-nodes/">28c3c4073e8879ea17bac7f02e7528e8</a></li>
+  <li>PAST GRAPH: <a href="https://talkinghouseglarus.github.io/talkinghouse.github.io/example/sound1past">The past</a></li>
+  <li>PRESENT GRAPH: <a href="https://talkinghouseglarus.github.io/talkinghouse.github.io/example/sound1present/">The present</a></li>
+</ul>
+
+<H1>Sound 2</H1>
+<p>
+<ul>
+  <li>PAST GRAPH: <a href="https://talkinghouseglarus.github.io/talkinghouse.github.io/example/sound2past">The past</a></li>
+  <li>PRESENT GRAPH: <a href="https://talkinghouseglarus.github.io/talkinghouse.github.io/example/sound2present">The present</a></li>
 </ul>
