Change the subdomain

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <H1>Sound 1</H1>
 <p>
 <ul>
-  <li>PAST GRAPH: <a href="https://talkinghouseglarus.github.io/talkinghouse.github.io/example/sound1past">The past</a></li>
-  <li>PRESENT GRAPH: <a href="https://talkinghouseglarus.github.io/talkinghouse.github.io/example/sound1present/">The present</a></li>
+  <li>PAST GRAPH: <a href="https://talkinghouseglarus.github.io/soundgraphs/example/sound1past">The past</a></li>
+  <li>PRESENT GRAPH: <a href="https://talkinghouseglarus.github.io/soundgraphs/example/sound1present/">The present</a></li>
 </ul>
 
 <H1>Sound 2</H1>
 <p>
 <ul>
-  <li>PAST GRAPH: <a href="https://talkinghouseglarus.github.io/talkinghouse.github.io/example/sound2past">The past</a></li>
-  <li>PRESENT GRAPH: <a href="https://talkinghouseglarus.github.io/talkinghouse.github.io/example/sound2present">The present</a></li>
+  <li>PAST GRAPH: <a href="https://talkinghouseglarus.github.io/soundgraphs/example/sound2past">The past</a></li>
+  <li>PRESENT GRAPH: <a href="https://talkinghouseglarus.github.io/soundgraphs/example/sound2present">The present</a></li>
 </ul>
