Fix the Honme page

--- a/index.html
+++ b/index.html
@@ -1,15 +1,52 @@
 <H1>The Talking House: Glarus</H1>
 
-<H1>Sound 1</H1>
+<p>
+The project describes how climate change has affected our sonic- environment observation
+
+<p>
+The Graphs presents the experience of transforming related sounds of past and present in the city of Glarus into analyzing graphs and numbers by data.
+
+<p>
+Choose your own destination listed in below and Click to explore data for the sonic soundscape of Glarus :
+
+<H3>Maybug Tektonikarena Sardona</H3>
 <p>
 <ul>
-  <li>PAST GRAPH: <a href="https://talkinghouseglarus.github.io/soundgraphs/example/sound1past">The past</a></li>
-  <li>PRESENT GRAPH: <a href="https://talkinghouseglarus.github.io/soundgraphs/example/sound1present/">The present</a></li>
+  <li>Past: <a href="https://talkinghouseglarus.github.io/soundgraphs/data/No_Cars_on_Sunday_mixdown_past">No_Cars_on_Sunday_mixdown_past</a></li>
+  <li>Present: <a href="https://talkinghouseglarus.github.io/soundgraphs/data/No_Cars_on_Sunday_mixdown_past/">No_Cars_on_Sunday_mixdown_past</a></li>
 </ul>
 
-<H1>Sound 2</H1>
+<H3>No public swimming Klöntalersee</H3>
 <p>
 <ul>
-  <li>PAST GRAPH: <a href="https://talkinghouseglarus.github.io/soundgraphs/example/sound2past">The past</a></li>
-  <li>PRESENT GRAPH: <a href="https://talkinghouseglarus.github.io/soundgraphs/example/sound2present">The present</a></li>
+  <li>Past: <a href="https://talkinghouseglarus.github.io/soundgraphs/data/No_Cars_on_Sunday_mixdown_past">No_Cars_on_Sunday_mixdown_past</a></li>
+  <li>Present: <a href="https://talkinghouseglarus.github.io/soundgraphs/data/No_Cars_on_Sunday_mixdown_past/">No_Cars_on_Sunday_mixdown_past</a></li>
+</ul>
+
+<H3>No cars on Sundays Main street in Glarus</H3>
+<p>
+<ul>
+  <li>Past: <a href="https://talkinghouseglarus.github.io/soundgraphs/data/No_Cars_on_Sunday_mixdown_past">No_Cars_on_Sunday_mixdown_past</a></li>
+  <li>Present: <a href="https://talkinghouseglarus.github.io/soundgraphs/data/No_Cars_on_Sunday_mixdown_past/">No_Cars_on_Sunday_mixdown_past</a></li>
+</ul>
+
+<H3>Frogs Walense  </H3>
+<p>
+<ul>
+  <li>Past: <a href="https://talkinghouseglarus.github.io/soundgraphs/data/No_Cars_on_Sunday_mixdown_past">No_Cars_on_Sunday_mixdown_past</a></li>
+  <li>Present: <a href="https://talkinghouseglarus.github.io/soundgraphs/data/No_Cars_on_Sunday_mixdown_past/">No_Cars_on_Sunday_mixdown_past</a></li>
+</ul>
+
+<H3>Power plant Powerplant Linth Limmern AG</H3>
+<p>
+<ul>
+  <li>Past: <a href="https://talkinghouseglarus.github.io/soundgraphs/data/No_Cars_on_Sunday_mixdown_past">No_Cars_on_Sunday_mixdown_past</a></li>
+  <li>Present: <a href="https://talkinghouseglarus.github.io/soundgraphs/data/No_Cars_on_Sunday_mixdown_past/">No_Cars_on_Sunday_mixdown_past</a></li>
+</ul>
+
+<H3>Right to vote City Hall</H3>
+<p>
+<ul>
+  <li>Past: <a href="https://talkinghouseglarus.github.io/soundgraphs/data/No_Cars_on_Sunday_mixdown_past">No_Cars_on_Sunday_mixdown_past</a></li>
+  <li>Present: <a href="https://talkinghouseglarus.github.io/soundgraphs/data/No_Cars_on_Sunday_mixdown_past/">No_Cars_on_Sunday_mixdown_past</a></li>
 </ul>
