--- a/index.html
+++ b/index.html
@@ -12,41 +12,35 @@ Choose your own destination listed in below and Click to explore data for the so
 <H3>Maybug Tektonikarena Sardona</H3>
 <p>
 <ul>
-  <li>Past: <a href="https://talkinghouseglarus.github.io/soundgraphs/data/No_Cars_on_Sunday_mixdown_past">No_Cars_on_Sunday_mixdown_past</a></li>
-  <li>Present: <a href="https://talkinghouseglarus.github.io/soundgraphs/data/No_Cars_on_Sunday_mixdown_past/">No_Cars_on_Sunday_mixdown_past</a></li>
+  <li>Sample visibility graph: <a href="https://talkinghouseglarus.github.io/soundgraphs/data/Maybug_mixdown">Maybug_mixdown</a></li>
 </ul>
 
 <H3>No public swimming Klöntalersee</H3>
 <p>
 <ul>
-  <li>Past: <a href="https://talkinghouseglarus.github.io/soundgraphs/data/No_Cars_on_Sunday_mixdown_past">No_Cars_on_Sunday_mixdown_past</a></li>
-  <li>Present: <a href="https://talkinghouseglarus.github.io/soundgraphs/data/No_Cars_on_Sunday_mixdown_past/">No_Cars_on_Sunday_mixdown_past</a></li>
+  <li>Sample visibility graph: <a href="https://talkinghouseglarus.github.io/soundgraphs/data/Public_Swimming_mixdown1">Public_Swimming_mixdown1</a></li>
 </ul>
 
 <H3>No cars on Sundays Main street in Glarus</H3>
 <p>
 <ul>
-  <li>Past: <a href="https://talkinghouseglarus.github.io/soundgraphs/data/No_Cars_on_Sunday_mixdown_past">No_Cars_on_Sunday_mixdown_past</a></li>
-  <li>Present: <a href="https://talkinghouseglarus.github.io/soundgraphs/data/No_Cars_on_Sunday_mixdown_past/">No_Cars_on_Sunday_mixdown_past</a></li>
+  <li>Sample visibility graph: <a href="https://talkinghouseglarus.github.io/soundgraphs/data/No_Cars_on_Sunday_mixdown_past">No_Cars_on_Sunday_mixdown_past</a></li>
 </ul>
 
 <H3>Frogs Walense  </H3>
 <p>
 <ul>
-  <li>Past: <a href="https://talkinghouseglarus.github.io/soundgraphs/data/No_Cars_on_Sunday_mixdown_past">No_Cars_on_Sunday_mixdown_past</a></li>
-  <li>Present: <a href="https://talkinghouseglarus.github.io/soundgraphs/data/No_Cars_on_Sunday_mixdown_past/">No_Cars_on_Sunday_mixdown_past</a></li>
+  <li>Sample visibility graph: <a href="https://talkinghouseglarus.github.io/soundgraphs/data/FrogHunt_mixdown">FrogHunt_mixdown</a></li>
 </ul>
 
 <H3>Power plant Powerplant Linth Limmern AG</H3>
 <p>
 <ul>
-  <li>Past: <a href="https://talkinghouseglarus.github.io/soundgraphs/data/No_Cars_on_Sunday_mixdown_past">No_Cars_on_Sunday_mixdown_past</a></li>
-  <li>Present: <a href="https://talkinghouseglarus.github.io/soundgraphs/data/No_Cars_on_Sunday_mixdown_past/">No_Cars_on_Sunday_mixdown_past</a></li>
+  <li>Sample visibility graph: <a href="https://talkinghouseglarus.github.io/soundgraphs/data/PowerPlant_mixdown">PowerPlant_mixdown</a></li>
 </ul>
 
 <H3>Right to vote City Hall</H3>
 <p>
 <ul>
-  <li>Past: <a href="https://talkinghouseglarus.github.io/soundgraphs/data/No_Cars_on_Sunday_mixdown_past">No_Cars_on_Sunday_mixdown_past</a></li>
-  <li>Present: <a href="https://talkinghouseglarus.github.io/soundgraphs/data/No_Cars_on_Sunday_mixdown_past/">No_Cars_on_Sunday_mixdown_past</a></li>
+  <li>Sample visibility graph: <a href="https://talkinghouseglarus.github.io/soundgraphs/data/Right_to_vote_mixdown">Right_to_vote_mixdown</a></li>
 </ul>
